# fraud-detection

./: .gitignore  README.md  RESULTS.md  pyproject.toml
notebooks/: 01_eda.ipynb
scripts/: run_api.py  run_pipeline.py
src/: api.py  config.py  data.py  evaluate.py  preprocess.py  train.py
