[project]
name = "fraud-detection"
version = "0.1.0"
description = "Credit card fraud detection with class-imbalanced ML + FastAPI serving"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "xgboost>=2.1.0",
    "imbalanced-learn>=0.12.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "joblib>=1.4.0",
    "kagglehub>=0.3.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
]

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
